--- a/二叉树/知识点.md
+++ b/二叉树/知识点.md
@@ -131,7 +131,7 @@ typedef struct tnode {
       2. 若有右孩子结点，则右孩子结点的编号为2i+1
    4. 当结点总数$n$为奇数时，$n_1=0$，每个分支结点都有左、右孩子；
       当结点总数$n$为偶数时，$n_1=1$，编号最大的分支结点$\lfloor n/2 \rfloor$只有左孩子
-   5. 具有$n(n>0)$个结点的完全二叉树的高度为$\lceil \log_{2} (n+1) \rceil$或$\lfloor \log{2} {n} \rfloor + 1$
+   5. 具有$n(n>0)$个结点的完全二叉树的高度为$\lceil \log_{2} (n+1) \rceil$或$\lfloor \log_{2} {n} \rfloor + 1$
 
 ### 二叉树与树、森林之间的转换
 #### 森林、树转换为二叉树
