--- a/图论/知识点.md
+++ b/图论/知识点.md
@@ -127,7 +127,7 @@ typedef struct
 ![alt text](image/带权邻接表.jpg)
 **特点**：
 - 邻接表的表示不唯一
-- 对于无向图，有$n$个头结点和$2e$个边界点；对于有向图，有$n$个头结点和$2e$个边界点；$\Rightarrow$ <u>特别适合于稀疏图存储</u>
+- 对于无向图，有$n$个头结点和$2e$个边界点；对于有向图，有$n$个头结点和$e$个边界点；$\Rightarrow$ <u>特别适合于稀疏图存储</u>
 - 对于无向图，邻接表中顶点$i$对应的第$i$个单链表的边结点数目正好是顶点$i$的度
 - *对于有向图，邻接表中顶点$i$对应的第$i$个单链表的边结点数目仅仅是顶点$i$的出度，顶点$i$的入度为邻接表中所有$adjvex$域值为$i$的边结点数目*
 - 在邻接表中，查找顶点$i$关联的所有边是非常迅速的，所以<u>在需要提取某个顶点的所有邻接点的算法中通常采用邻接表存储</u>
